--- a/assets/css/marketplace.css
+++ b/assets/css/marketplace.css
@@ -16,106 +16,115 @@
   }
   
 
-  .sidebar {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 80px;
-    height: 100%;
-    padding: 6px 14px;
-    background: #262626;
-    transition: .5s;
-  }
+.sidebar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 80px;
+  height: 100%;
+  padding: 6px 14px;
+  background: #262626;
+  transition: .5s;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  overflow: hidden;
+}
 
-  .sidebar.active {
-    width: 220px;
-  }
-  
-  .sidebar .logo-menu {
-    display: flex;
-    width: 100%;
-    align-items: center;
-    width: 100%;
-    height: 70px;
-  }
+.sidebar.active {
+  width: 220px;
+}
 
-  .sidebar .logo-menu .logo {
-    font-size: 25px;
-    color: #fff;
-    pointer-events: none;
-    opacity: 0;
-    transition: .3s;
-  }
+.sidebar .logo-menu {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  height: 70px;
+}
 
-  .sidebar.active .logo-menu .logo {
-    opacity: 1;
-    transition-delay: .2s;
-  }
-  
-  .sidebar .logo-menu .toggle-btn {
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    color: #fff;
-    width: 40px;
-    height: 40px;
-    font-size: 22px;
-    text-align: center;
-    line-height: 40px;
-    transition: .5s;
-  }
+.sidebar .logo-menu .logo {
+  font-size: 25px;
+  color: #fff;
+  pointer-events: none;
+  opacity: 0;
+  transition: .3s;
+}
 
-  .sidebar.active .logo-menu .toggle-btn {
-    left: 90%;
-  }
+.sidebar.active .logo-menu .logo {
+  opacity: 1;
+  transition-delay: .2s;
+}
 
-  .sidebar .lista {
-    margin-top: 10px;
-  }
+.sidebar .logo-menu .toggle-btn {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  color: #fff;
+  width: 40px;
+  height: 40px;
+  font-size: 22px;
+  text-align: center;
+  line-height: 40px;
+  transition: .5s;
+}
 
-  .lista .lista-item {
-    list-style: none;
-    width: 100%;
-    height: 50px;
-    margin: 5px 0;
-    line-height: 50px;    
-  }
+.sidebar.active .logo-menu .toggle-btn {
+  left: 90%;
+}
 
-  .lista .lista-item a {
-    display: flex;
-    align-items: center;
-    font-size: 18px;
-    color: #D2D2D2;
-    white-space: nowrap;
-    text-decoration: none;
-    border-radius: 6px;
-    transition: .5s;
-  }
+.sidebar .lista {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  padding-top: 10px;
+}
 
-  .lista .lista-item.ativar a,
-  .lista .lista-item a:hover {
-    background: rgba(255, 255, 255, .2);
-  }
+.lista .espacador {
+  flex-grow: 1;
+}
 
-  .lista .lista-item a i {
-    min-width: 50px;
-    height: 50px;
-    text-align: center;
-    line-height: 50px;
+.lista .lista-item {
+  list-style: none;
+  width: 100%;
+  height: 50px;
+  margin: 5px 0;
+  line-height: 50px;
+}
 
-  }
+.lista .lista-item a {
+  display: flex;
+  align-items: center;
+  font-size: 18px;
+  color: #D2D2D2;
+  white-space: nowrap;
+  text-decoration: none;
+  border-radius: 6px;
+  transition: .5s;
+}
 
-  .sidebar .nome-link {
-    opacity: 0;
-    pointer-events: none;
-    transition: opacity .3s;
-  }
+.lista .lista-item.ativar a,
+.lista .lista-item a:hover {
+  background: rgba(255, 255, 255, .2);
+}
 
-  .sidebar.active .nome-link {
-    opacity: 1;
-    pointer-events: auto;
-    transition-delay: calc(.1s * var(--i));
-  }
+.lista .lista-item a i {
+  min-width: 50px;
+  height: 50px;
+  text-align: center;
+  line-height: 50px;
+}
+
+.sidebar .nome-link {
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity .3s;
+}
+
+.sidebar.active .nome-link {
+  opacity: 1;
+  pointer-events: auto;
+  transition-delay: calc(.1s * var(--i));
+}
 
   .main-content {
     margin-left: 80px; 
@@ -165,10 +174,6 @@
     color: white;
     cursor: pointer;
   }
-  .lista-item.grupo-inferior {
-    margin-top:200px;
-
-  }  
   
   body.light-mode {
     background-color: #ffffff !important;
@@ -209,3 +214,54 @@
     color: #262626;
   }
 
+.top-bar {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.cart-icon {
+  font-size: 24px;
+  color: #ffffff;
+  padding: 8px 12px;
+  border-radius: 8px;
+  text-decoration: none;
+  transition: background-color 0.3s;
+}
+
+
+body.light-mode .cart-icon {
+  color: white;
+}
+
+.marketplace-header {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.marketplace-title {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.cart-icon {
+  font-size: 26px;
+  color: white;
+  text-decoration: none;
+  transition: color 0.3s;
+}
+
+.cart-icon:hover {
+  color: #1D4ED8;
+}
+
+/* Modo claro */
+body.light-mode .cart-icon {
+  color: #262626;
+}
+body.light-mode .cart-icon:hover {
+  color: #1D4ED8;
+}
