--- a/assets/css/suporteUsuario.css
+++ b/assets/css/suporteUsuario.css
@@ -265,3 +265,89 @@ body.light-mode .suporte-box {
 body.light-mode .suporte-box p {
   color: #444;
 }
+
+.suporte-lista {
+  padding-top: 10px;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+  gap: 2rem;
+  padding-inline: 1rem;
+}
+
+.suporte-item {
+  background-color: #1f1f1f;
+  border: 1px solid #333;
+  padding: 16px;
+  margin-bottom: 16px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px #00000055;
+  transition: .2s;
+}
+
+.suporte-item:hover {
+  transform: translateY(-5px);
+}
+
+.suporte-item p {
+  margin: 8px 0;
+  font-size: 15px;
+}
+
+.suporte-item strong {
+  color: #4CAF50;
+}
+
+.container {
+  padding-top: 20px;
+}
+
+.form-group {
+  width: 100%;
+  height: 400px;
+  border-radius: 10px;
+  background-color: transparent;
+  border: 2px solid rgba(255, 255, 255, .2);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+  gap: 15px;
+  
+}
+
+.form-group input {
+  width: 100%;
+  background-color: #4a4a4a;
+  border-radius: 10px;
+  padding: 10px 15px;
+  border: none;
+  color: white;
+  font-size: 16px;
+  outline: none;
+}
+
+.form-group input[id="descricao"]{
+  padding: 60px 15px;
+}
+
+.form-group input[id="descricao"]::placeholder {
+  
+}
+
+.form-group button {
+  border-radius: 10px;
+  padding: 7px;
+  border: none;
+  padding: 10px 15px;
+  outline: none;
+  background-color: #4a4a4a;
+  color: white;
+  transition: .2s;
+}
+
+.form-group button:hover {
+  color: #4CAF50;
+  cursor: pointer;
+  transform: translateY(-2px);
+}
