--- a/assets/css/suporteUsuario.css
+++ b/assets/css/suporteUsuario.css
@@ -286,6 +286,7 @@ body.light-mode .suporte-box p {
 
 .suporte-item:hover {
   transform: translateY(-5px);
+  cursor: pointer;
 }
 
 .suporte-item p {
@@ -350,4 +351,38 @@ body.light-mode .suporte-box p {
   color: #4CAF50;
   cursor: pointer;
   transform: translateY(-2px);
+}
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.8);
+    justify-content: center;
+    align-items: center;
+}
+
+.modal-content {
+    background-color: #1c1c1c;
+    padding: 20px;
+    border-radius: 10px;
+    width: 400px;
+    color: white;
+    position: relative;
+}
+
+.modal-content strong {
+  color: #4CAF50;
+}
+
+.fechar {
+    position: absolute;
+    right: 15px;
+    top: 10px;
+    font-size: 24px;
+    cursor: pointer;
 }
